[gd_scene load_steps=8 format=3 uid="uid://c28ushbi1wx5f"]

[ext_resource type="Texture2D" uid="uid://dcr07h3olobw" path="res://Assets/Dice/small.png" id="1_jumh2"]
[ext_resource type="Script" uid="uid://dwcj8sceos5oj" path="res://Scenes/ShopEntry/shop_entry.gd" id="1_qe40j"]
[ext_resource type="AudioStream" uid="uid://c6dyk2ebpk2" path="res://Assets/Sounds/select.wav" id="3_a45ye"]

[sub_resource type="LabelSettings" id="LabelSettings_qe40j"]
line_spacing = 0.0
font_size = 6
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_f4fqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a45ye"]
resource_name = "rainbow"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2, 4, 6, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0.454902, 1, 1), Color(0, 1, 0, 1), Color(1, 0.929412, 0, 1), Color(0.972549, 0, 0, 1), Color(1, 0, 1, 1), Color(0, 0.454902, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f4fqv"]
_data = {
&"RESET": SubResource("Animation_f4fqv"),
&"rainbow": SubResource("Animation_a45ye")
}

[node name="ShopEntry" type="Control"]
custom_minimum_size = Vector2(180, 26)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 32.0
pivot_offset = Vector2(0, 10)
mouse_default_cursor_shape = 2
script = ExtResource("1_qe40j")

[node name="Container" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(180, 26)
layout_mode = 0
offset_right = 154.0
offset_bottom = 20.0

[node name="Image" type="TextureRect" parent="Container"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_jumh2")
stretch_mode = 2

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
text = "D6: Lose all your points if this dice scores one.
Cost: 100P"
label_settings = SubResource("LabelSettings_qe40j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f4fqv")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a45ye")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
